--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./components/abstracts/variables";
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap');
 
 * {
@@ -10,5 +12,5 @@ html {
 
 body {
   margin: 0;
-  background-color: #3f3f3f;
+  background-color: $color-primary;
 }
