--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,20 @@
 @import "./components/abstracts/variables";
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap');
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
 }
 
+
 body {
-  margin: 0;
   background-color: $color-primary;
+  font-family: $font-primary;
+  color: $color-grey-light-1;
+  font-weight: 400;
+  line-height: 1.6;
 }
