--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ html {
 
 body {
   background-color: $color-primary;
+  margin: 0 2rem;
   font-family: $font-primary;
   color: $color-grey-light-1;
   font-weight: 400;
