language known complete

--- a/src/components/Abstracts/Variables.scss
+++ b/src/components/Abstracts/Variables.scss
@@ -1,11 +1,25 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&family=Comfortaa:wght@300;400;700&family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap');
+
 $font-primary : 'Lato',sans-serif;
 $font-secondary : 'Roboto',sans-serif;
 $font-tertiary : 'Montserrat',sans-serif;
+$font-curve : 'Comfortaa',sans-serif;
+$font-bold-curve : 'Alkatra', sans-serif;
+
+
+// Font Size
+$Title : 4rem;
+
 
 // Color
 $color-primary : #02021A;
+$color-primary-light : #1E2248;
+$color-secondary : #FF4E00;
+$color-secondary-light : #EC9F05;
+$color-tertiary : #8BF5FA;
+
+
 
 
 $color-grey-light-1: #f7f7f7;
@@ -17,4 +31,8 @@ $color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
+
+
+// Magnitude
+$header-height:10rem;
 
