--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,12 @@
     display: grid;
     grid-template-rows: repeat(7,[row-start] 100vh [row-end]);
     grid-template-columns: repeat(12,[col-start] 1fr [col-end]);
+    // scroll-snap-type: y mandatory;
+    // overflow-y: scroll;
+    // height: 100vh;
+}
+
+.scroll{
+    // background-color: antiquewhite;
+    // scroll-snap-align: start;
 }
