--- a/src/components/Header/NameAndPhoto.scss
+++ b/src/components/Header/NameAndPhoto.scss
@@ -1,3 +1,5 @@
+@import "../Abstracts/Variables.scss";
+
 .name_and_photo{
     grid-column: 1 / 5;
     // background-color: red;
@@ -7,7 +9,7 @@
     // align-items: center;
 
     display: grid;
-    grid-template-rows: 7rem 1fr;
+    grid-template-rows: $header-height 1fr;
 
 
     &-name{
@@ -16,9 +18,12 @@
         // margin-top: auto;
         align-self:flex-end;
         margin-left: 20%;
+        font-family: $font-secondary;
+        letter-spacing: 2px;
     }
     
     & img{
+        grid-row: 2/-1;
         width : 60%;
         justify-self: center;
         align-self: center;
