--- a/src/components/Abstracts/Variables.scss
+++ b/src/components/Abstracts/Variables.scss
@@ -15,8 +15,8 @@ $Title : 4rem;
 // Color
 $color-primary : #02021A;
 $color-primary-light : #1E2248;
-$color-secondary : #FF4E00;
-$color-secondary-light : #EC9F05;
+$color-secondary : #ff4e00;
+$color-secondary-light : rgb(236, 159, 5);
 $color-tertiary : #8BF5FA;
 
 
