--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,11 +1,16 @@
 @import '../Abstracts/Variables.scss';
+@import '../Abstracts/Mixins.scss';
+
 
 .aboutMe{
     grid-column: 1/-1;
+    grid-row: 2/3;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: $header-height max-content 1fr;
+    // grid-template-columns: repeat(3,1fr);
+    grid-template-rows: $header-height max-content max-content $footer-height;
     // grid-auto-flow: column;
+    background-color: red;
+    width: 100vw;
 
     &_Title{
         grid-column: 1/-1;
@@ -18,8 +23,9 @@
 
     &_Options{
         // background-color: red;
+        font-family: $font-tertiary;
         grid-row: 2/3;
-        grid-column: 1/-1;
+        // grid-column: 1/-1;
         // display: grid;
         display: grid;
         grid-template-columns: 1fr 2fr 1fr;
@@ -28,8 +34,19 @@
         // justify-content: space-around;
         // justify-self: center;
         // margin: 3rem;
+
+        @include respond(phone){
+            grid-template-columns: 1fr 2fr;
+        }
+
+
         &-text{
             grid-column: 1/2;
+            font-size: 1.3rem;
+
+            @include respond(phone){
+                visibility: hidden;
+            }
             // align-self: center;
         }
 
@@ -40,6 +57,10 @@
             // background-color: red;
             width: 360px;
             height: 100px;
+            @include respond(phone){
+                grid-column: 1/3;
+        
+            }
         }
 
         &_All{
@@ -109,7 +130,8 @@
             & span{
                 width: 80px;
                 text-align: center;
-                font-size: 1.3rem;
+                font-size: 1.6rem;
+                font-weight: 600;
                 // background-color: red;
             }
         }
@@ -117,12 +139,17 @@
 
     
     &_Resume-Details{
-        grid-column: 1/-1;
+        // grid-column: 1/-1;
         grid-row: 3/4;
         align-content: start;
         // background-color: palegreen;
         display: grid;
-        grid-template-columns: repeat(3,1fr) 6fr repeat(3,1fr);
+        grid-template-columns: repeat(3,1fr) 7fr repeat(3,1fr);
+
+        @include respond(phone){
+            grid-template-columns: 0.5fr max-content 0.5fr 7fr 1fr;    
+        }
+
     }
     
     &_Resume{
@@ -141,11 +168,13 @@
 
     &_details{
         grid-column: 4/5;
-        background: linear-gradient(to bottom right,$color-primary-light,$color-primary);
+        background: $blue-gradient-right;
         padding: 15px;
         border-radius: 15px;
         margin-top: 7rem;
-        margin-bottom: 10rem;
+        // margin-bottom: 10rem;
+        // font-family: $font-primary;
+        font-size: 1.5rem;
         // background-color: red;
     }
 }
