--- a/src/components/Header/Hello.scss
+++ b/src/components/Header/Hello.scss
@@ -1,23 +1,38 @@
 @import '../Abstracts/Variables.scss';
 @import '../Abstracts/Animations.scss';
+@import '../Abstracts/Mixins.scss';
 
-.welcome_screen{
-    grid-column: 5/-1;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: $header-height 1fr;
+.welcomeScreen{
+    // grid-column: 5/-1;
+    // grid-row: 2/3;
+    width: 57vw;
+    height: 40vw;
+    // height: 100%;
+    // position: relative;
+    // display: grid;
+    // grid-template-rows: $header-height repeat(4, 1fr);
+    // grid-template-columns: repeat(7,1fr);
     // align-items: center;
     // justify-content: center;
-    // background-color: red;
+    background-color: rgba(255, 255, 0, 0.226);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    &-hello{
-        // background-color: red;
+    @include respond(phone){
+        width: 100vw;
+    }
+    
+
+    &-Hello{
+        // background-color: green;
         // width: 6vw;
         // height: 100%;
         // font-size: 20vw;
         // transform: scaleX()
-        grid-row: 2/-1;
+        // top: 70%;
+        // grid-row: 2/-1;
+        // grid-column: 1/-1;
         width: min-content;
         line-height: 1;
         letter-spacing: 1vw;
@@ -28,12 +43,51 @@
         // color: rgba($color: $color-white, $alpha: 0.1);
         // transform: scaleY(1.8) translateY(2.2vw);
         // margin: auto auto;
-        align-self: center;
-        justify-self: center;
+        // align-self: center;
+        // justify-self: center;
         animation-name: scaleUP;
         animation-duration: 1.2s; //
         animation-timing-function: ease-out; 
         animation-fill-mode: forwards;
+        // display: flex;
+        // align-items: end;
+        // position: absolute;
+        // top: 12rem;
         
+    }
+    &-Container{
+       //  grid-row: 4/5;
+       //  grid-column: 3/7;
+       background-color: blueviolet;
+        display: inline-block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+     &-Iam{
+        // background-color: red;
+        grid-row: 3/4;
+        grid-column: 2/5;
+        z-index: 5;
+        font-size: 4rem;
+        font-family: $font-tertiary;
+        // width: 100%;
+        // text-align: left;
+        display: flex;
+        align-items: flex-end;
+     }
+
+        
+    &-Skill{
+        background-color: red;
+        z-index: 5;
+        color: $color-secondary;
+        font-size: 6rem;
+        font-family: $font-secondary;
+        // font-weight: 600;
+        width: 90%;
+        overflow: hidden;
+        white-space: nowrap;
     }
 }
