--- a/src/components/Abstracts/Variables.scss
+++ b/src/components/Abstracts/Variables.scss
@@ -13,10 +13,10 @@ $Title : 4rem;
 
 
 // Color
-$color-primary : rgb(2, 2, 26);
+$color-primary : #02021a;
 $color-primary-light : #1E2248;
-$color-secondary : rgb(255, 78, 0);
-$color-secondary-light : rgb(235, 158, 5);
+$color-secondary : #ff4e00;
+$color-secondary-light : #eb9e05;
 $color-tertiary : #8BF5FA;
 
 
@@ -34,12 +34,12 @@ $color-black: #000;
 
 
 // Gradient
-$blue-gradient-right: linear-gradient(to bottom right,$color-primary-light,$color-primary);
-$blue-gradient-left: linear-gradient(to bottom left,$color-primary-light,$color-primary);
+$blue-gradient-right: linear-gradient(to bottom right,#1E2248,#02021a);
+$blue-gradient-left: linear-gradient(to bottom left,#1E2248,#02021a);
 
-$orange-gradient-right: linear-gradient(to right, $color-secondary-light, $color-secondary);
-$orange-gradient-left: linear-gradient(to left, $color-secondary-light, $color-secondary);
-$orange-gradient-bottom-right: linear-gradient(to bottom right, $color-secondary-light, $color-secondary);
+$orange-gradient-right: linear-gradient(to right, #eb9e05, #ff4e00);
+$orange-gradient-left: linear-gradient(to left, #eb9e05, #ff4e00);
+$orange-gradient-bottom-right: linear-gradient(to bottom right, #eb9e05, #ff4e00);
 
 
 // Magnitude
