--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "./components/abstracts/variables";
+@import "./components/abstracts/Variables.scss";
 @import "./components/abstracts/Mixins.scss";
 
 * {
