--- a/src/components/Abstracts/Variables.scss
+++ b/src/components/Abstracts/Variables.scss
@@ -50,5 +50,6 @@ $footer-height:10rem;
 
 $perspective_value:50rem;
 $shadow:0rem 0rem 1.3rem rgba(69, 76, 133, 0.995);
+$shadow-2: 0rem 0rem 1.8rem rgba(69, 76, 133, 0.995);
 $border-color_value: rgba(255, 255, 255, 0.15);
 
