--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -9,7 +9,7 @@
     // width: 20rem;
     // height: 100vh;
     z-index: 3000;
-    background-color: lightpink;
+    // background-color: lightpink;
 
     &-Container{
         position: fixed;
