--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -15,11 +15,13 @@
     &-Container{
         margin: 4rem 0;
         display: flex;
+        flex-wrap: wrap;
+        gap: 8rem;
         justify-content: space-evenly;
-        @include respond(phone){
-        flex-direction: column;
-        margin: 0;
-        }
+        // @include respond(phone){
+        // flex-direction: column;
+        // margin: 0;
+        // }
     }
 
 
@@ -34,7 +36,7 @@
     }
 
     &-Graph {
-        background-color: red;
+        // background-color: red;
         
         // grid-row: 2/8;
         // grid-column: 1/2;
@@ -43,10 +45,10 @@
         align-items: center;
 
         padding: 0 8rem;
-        @include respond(phone){
-            padding: 0;
-            margin-bottom: 7rem;
-        }
+        // @include respond(phone){
+        //     padding: 0;
+        //     margin: 1rem 0 8rem 0;
+        // }
         // margin: 5rem 0;
         // margin: 5rem;
         
@@ -69,7 +71,7 @@
             // border-width: 0.1rem;
             // border-style:solid;
             // box-sizing: border-box;
-            box-shadow: $shadow;
+            box-shadow: $shadow-2;
             // transform: rotate(-90deg);
             // background-position: 270deg;
 
@@ -93,7 +95,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            box-shadow: inset $shadow;
+            box-shadow: inset $shadow-2;
             // margin: 1rem 1rem;
             // padding: 1rem;
         }
@@ -114,7 +116,6 @@
         
         @include respond(phone){
             margin: auto;
-            
         }
 
         // &-Btn{
