--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,16 +7,12 @@
     grid-column: 1/-1;
     display: grid;
     grid-template-rows: $header-height 1fr $footer-height;
-    // grid-template-columns: 5fr 3fr;
-    // background-color: red;
     position: relative;
-    // grid-template-columns: 2fr 1fr;
 
     &-Container{
         display: flex;
-        @include respond(phone){
-            flex-direction: column;
-        }
+        justify-content: space-evenly;
+        flex-wrap: wrap;
     }
 
     &-Title{
@@ -29,19 +25,27 @@
         color: $color-tertiary;
     }
 
+    &-Connect{
+        // background-color: red;
+        margin: 4rem 3rem;
+    }
+
     &-Form{
         grid-row: 2/3;
-        grid-column: 1/2;
+        // grid-column: 1/2;
         // background-color: blue;
-        margin: 0 10% 0 5%;
+        min-width: 35rem;
+        width: 45%;
+        margin: 4rem 3rem;
+        // margin: 0 10% 0 5%;
         
         &-Group:not(:last-child) {
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
     
         &-Input {
-            grid-row: 2/3;
-            grid-column: 1/2;
+            // grid-row: 2/3;
+            // grid-column: 1/2;
             color: black;
             font-size: 1.5rem;
             font-family: $font-tertiary;
@@ -89,12 +93,11 @@
         &-Submit{
             @include button-styles;
             width: 10rem;
+            // margin: auto;
             // text-align: center;
             background: $orange-gradient-left;
             font-family: $font-tertiary;
             font-weight: 700;
-        //    display: flex;
-        //    flex-direction: row-reverse;
         }
     }
 
@@ -111,12 +114,7 @@
     }
 
     &-GetInTouch{
-        // background-color: red;
         margin-top: 4rem;
-        width: 70%;
-        // display: flex;
-        // justify-content: center;
-        // flex-direction: column;
         
         &-Method{
             color: white;
@@ -124,7 +122,6 @@
             font-size: 1.3rem;
             // margin: 2rem;
             display: flex;
-            // justify-content: center;
             align-items: center;
 
             & span{
