--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,10 @@
     display: grid;
     // grid-template-columns: repeat(12,1fr);
     grid-template-rows: $header-height 1fr $footer-height;
+    @include respond(phone){
+        grid-template-rows: ($header-height+2rem) 1fr $footer-height;
+    }
+
 
     &-Container{
         grid-row: 2/3;
@@ -15,18 +19,25 @@
 
         @include respond(phone){
             flex-direction: column;
+            // justify-content: space-around;
+            gap: 7rem;
         }
         // background-color: greenyellow;
     }
 
-    &-My-Name{
+    &-MyName{
         grid-row: 1/2;
+        // background-color: red;
         // justify-self: center;
         // margin-top: auto;
-        align-self:flex-end;
-        margin-left: 20%;
+        // align-self:flex-end;
+        display: flex;
+        align-items: center;
+        padding-left: 10%;
+        // margin-left: 20%;
         font-family: $font-secondary;
         letter-spacing: 2px;
+
     }
 
 
