--- a/src/components/LanguageKnown/EachLanguage.scss
+++ b/src/components/LanguageKnown/EachLanguage.scss
@@ -7,8 +7,8 @@
     // width: minmax(80%,90%);
     // min-width: 50rem;
     // max-width: 70%;
-    width: 100%;
-    margin: 1rem 0rem;
+    // width: 100%;
+    margin: 2rem 0rem;
     height: 80%;
     display: grid;
     grid-template-rows: 1fr 1fr;
