--- a/src/components/LanguageKnown/LanguageKnown.scss
+++ b/src/components/LanguageKnown/LanguageKnown.scss
@@ -5,12 +5,12 @@
     grid-column: 1/-1;
     grid-row: 3/4;
     display: grid;
-    grid-template-rows: $header-height repeat(6,1fr) $footer-height;
+    grid-template-rows: $header-height repeat(5,1fr) $footer-height;
     grid-template-columns: 1fr minmax(70rem,70vw) 3fr;
     @include respond(phone){
         grid-template-columns: 1fr 93vw 1fr;
     }
-    background-color: blue;
+    // background-color: blue;
     // height: 1vh;
 
     &-Title{
