--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -105,7 +105,7 @@
         // background-color: red;
         display: flex;
         justify-content: space-between;
-        width: 70%;
+        // width: 70%;
 
         &-Link{
             margin: 10px;
