--- a/src/components/Header/Hello.scss
+++ b/src/components/Header/Hello.scss
@@ -2,29 +2,29 @@
 @import '../Abstracts/Animations.scss';
 @import '../Abstracts/Mixins.scss';
 
-.welcomeScreen{
+.welcomeScreen {
     // grid-column: 5/-1;
     // grid-row: 2/3;
     width: 57vw;
     height: 40vw;
     // height: 100%;
-    // position: relative;
+    position: relative;
     // display: grid;
     // grid-template-rows: $header-height repeat(4, 1fr);
     // grid-template-columns: repeat(7,1fr);
     // align-items: center;
     // justify-content: center;
-    background-color: rgba(255, 255, 0, 0.226);
+    // background-color: rgba(255, 255, 0, 0.226);
     display: flex;
     justify-content: center;
     align-items: center;
 
-    @include respond(phone){
+    @include respond(phone) {
         width: 100vw;
     }
-    
 
-    &-Hello{
+
+    &-Hello {
         // background-color: green;
         // width: 6vw;
         // height: 100%;
@@ -39,55 +39,37 @@
         font-family: $font-bold-curve;
         font-weight: 700;
         font-size: 23vw;
-        // height: fit-content;
-        // color: rgba($color: $color-white, $alpha: 0.1);
-        // transform: scaleY(1.8) translateY(2.2vw);
-        // margin: auto auto;
-        // align-self: center;
-        // justify-self: center;
         animation-name: scaleUP;
         animation-duration: 1.2s; //
-        animation-timing-function: ease-out; 
+        animation-timing-function: ease-out;
         animation-fill-mode: forwards;
-        // display: flex;
-        // align-items: end;
-        // position: absolute;
-        // top: 12rem;
-        
+        @include respond(phone) {
+            font-size: 30vw;
+        }    
     }
-    &-Container{
-       //  grid-row: 4/5;
-       //  grid-column: 3/7;
-       background-color: blueviolet;
-        display: inline-block;
+
+    &-Message {
+        //  grid-row: 4/5;
+        //  grid-column: 3/7;
+        // background-color: blueviolet;
+        color: #f5f5f5cf;
+        font-weight: 700;
+        height: 60%;
+        max-height: 20rem;
+        width: 60%;
+        // display: inline-block;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-    }
-     &-Iam{
-        // background-color: red;
-        grid-row: 3/4;
-        grid-column: 2/5;
-        z-index: 5;
-        font-size: 4rem;
-        font-family: $font-tertiary;
-        // width: 100%;
-        // text-align: left;
-        display: flex;
-        align-items: flex-end;
-     }
+        font-size: 5rem;
+        font-family: $font-bold-curve;
+        letter-spacing: 1.5px;
 
-        
-    &-Skill{
-        background-color: red;
-        z-index: 5;
-        color: $color-secondary;
-        font-size: 6rem;
-        font-family: $font-secondary;
-        // font-weight: 600;
-        width: 90%;
-        overflow: hidden;
-        white-space: nowrap;
+        @include respond("phone"){
+            font-size: 3rem;
+        }
+
     }
+
 }
