--- a/src/components/Navbar/Menu.scss
+++ b/src/components/Navbar/Menu.scss
@@ -1,45 +1,158 @@
 @import '../Abstracts/Variables.scss';
+@import '../Abstracts/Mixins.scss';
+
+// .menu{
+//     width: 7rem;
+//     height: 7rem;
+//     border-radius: 50%;
+//     position: fixed;
+//     top: 3rem;
+//     right: 3rem;
+    
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     z-index: 500;
+//     @include respond("tab-port"){
+//         top:1rem;
+//         right:1rem;
+//     }
+
+//     // transform: scale(100);
+//     // transform: scale(4);
+//     // cursor: pointer;
+
+//     &-Gradient{
+//         width: 6.3rem;
+//         height: 6.3rem;
+//         // background-color: yellow;
+//         background: radial-gradient($color-primary,$color-primary-light);
+//         border-radius: 50%;
+//         position:fixed;
+//         top: 0.2rem;
+//         right: 6.5rem;
+//         z-index: 2000;
+//         transition: all 0.5s ease-in-out;
+//         transform: translateX(50%) translateY(50%);
+
+//         @include respond("tab-port"){
+//             top: -1.8rem;
+//             right: 4.5rem;
+//         }
+
+//         // transform: scale(16)
+//     }
+
+//     &-Scale{
+//         // transform: scale(100);
+//         width :250vmax;
+//         height: 250vmax;
+//     }
+
+    
+//    &-Bars{
+//     // background-color: blue;
+//     position: relative;
+//     z-index: 4000;
+//     transition: all 0.2s;
+//     cursor: pointer;
+//     &:hover{
+//         transform: scale(1.2);
+//     }
+//    }
+
+//     &-Bar{
+//         width: 3rem;
+//         height: 0.2rem;
+//         background-color: $color-white;
+//         margin: 0.7rem;
+//         transition: all 0.5s ease-out;
+//         // cursor: pointer;
+
+//         // z-index: 20rem;
+//         // flex-grow: 1;
+
+//     }
+
+//     &-Top{
+//         // background-color: blue;
+//         // transition: all 0.5s;
+//         transform: rotate(45deg);
+//         position: absolute;
+//         top: 0;
+        
+        
+//         // transform: scaleX(1.1)
+//     }
+
+//     &-Middle{
+//         // transition: all 0.2s;
+//         background-color: transparent;
+//     }
+
+//     &-Bottom{
+//         // transform-origin: 50%;
+//         // transition: all 0.5s;
+//         transform: rotate(-45deg);
+//         position: absolute;
+//         top: 0;
+//     }
+// }
+
+
 
 .menu{
-    width: 7rem;
-    height: 7rem;
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
     position: fixed;
-    top: 3rem;
-    right: 3rem;
+    top: 2rem;
+    right: 2rem;
     
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 500;
+    z-index: 50;
+    @include respond("tab-port"){
+        top: 1rem;
+        right: 1rem;
+    }
 
     // transform: scale(100);
-    // transform: scale(4);
     // cursor: pointer;
 
     &-Gradient{
-        width: 7rem;
-        height: 7rem;
+        // box-shadow: $shadow;
+        width: 6rem;
+        height: 6rem;
         // background-color: yellow;
         background: radial-gradient($color-primary,$color-primary-light);
         border-radius: 50%;
         position:fixed;
-        top: 3rem;
-        right: 3rem;
-        z-index: 2000;
-        transition: all 0.5s cubic-bezier(.68,.05,.45,.96);
-        // transform: scale(16)
+        top: 5rem;
+        right: 5rem;
+        z-index: 200;
+        // transition: all 0.5s cubic-bezier(.68,.05,.45,.96);
+        transition: all 0.5s ease-in-out;
+        transform: translateX(50%) translateY(-50%);
+        @include respond("tab-port"){
+            top: 4rem;
+            right: 4rem;
+        }
     }
 
+
     &-Scale{
-        transform: scale(100);
+        // transform: scale(80);
+        width :220vmax;
+        height: 220vmax;
     }
 
     
    &-Bars{
     // background-color: blue;
     position: relative;
-    z-index: 4000;
+    z-index: 400;
     transition: all 0.2s;
     cursor: pointer;
     &:hover{
