--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,6 @@
 @import '../Abstracts/Variables.scss';
 @import '../Abstracts/Animations.scss';
+@import '../Abstracts/Mixins.scss';
 
 
 .navbar{
@@ -27,6 +28,11 @@
         left:50%;
         display: flex;
         flex-direction: column;
+        font-size: 3rem;
+        font-weight: 400;
+        // @include respond("tab-port"){
+        //     // font-size: 1.8rem;
+        // }
 
         // transform: translate(-50%,-50%);
         animation: slide-NavLinks 0.8s;
@@ -50,19 +56,20 @@
         // display: flex;
         // justify-content: center;
         // align-items: center;
+        
 
         &:link,
         &:visited {
             // display: inline-block;
-            font-size: 3rem;
-            font-weight: 400;
             padding: 1rem 2rem;
             color: $color-white;
             text-decoration: none;
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
-            background-size: 220%;
+            background-size: 230%;
             transition: all .4s;
+
+
 
             // span {
             //     margin-right: 1.5rem;
